Fixed details on skill details and dark mode

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,5 +1,5 @@
 /* Shared CSS for all pages with nav tag in it */
-@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+
 
 header {
         display: block;
@@ -51,15 +51,36 @@ section#main_section {
     max-width: 100%;
 }
 
+div#menu_title_div {
+    width: 100%;
+}
+
 h2#menu_title {
-    display: block;
-    font-family: Monospace, serif;
+    display: inline-block;
+    font-family: "Segoe UI", Roboto, Helvetica, Arial, serif;
     font-weight: bold;
-    font-size: 40px;
-    color: #884545;
-    text-align: left;
-    margin: 0 0 0 auto;
-    padding: 1em 0 0 3em;
+    font-size: 24px;
+    color: #ea9085;
+    margin: 0;
+    width: calc(100% - 1.5em);
+    padding-left: 1.5em;
+    padding-right: -1.5em;
+    padding-top: 1em;
+    background-color: #4d4d4d;
+}
+
+h2#menu_title::after {
+    content: "";
+    display: inline-block;
+    position: relative;
+    margin-top: 0;
+    padding-top: 0;
+    width: 90%;
+    border-bottom: 5px solid #ea9085;
+    margin-bottom: 1em;
+    transition: max-width .6s;
+    transition-duration: 3s;
+    overflow: hidden;
 }
 
 /* Blurs in and out */
@@ -118,7 +139,6 @@ h2#sub_title {
 
 li.outer_list {
     width: 100%;
-    padding: 0.5em 0 0.5em 0;
 }
 
 li#title_list,
@@ -142,82 +162,52 @@ li.nav_li_item {
     display: block;
     position: relative;
     padding: 0 0 0 1em;
-    width: 15%;
 }
 
-a.nav-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0);
-    border-radius: 15px;
-    border: solid 2px #b5b3b7;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    flex-shrink: 0;
-    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+li.nav_li_item a {
+    display: block;
+    position: relative;
+    width: 15vw;
     text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-    transition: all .5s;
     text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: 250px;
-    height: 3em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    font-family: Georgia, serif;
+    animation: 1s ease-out 0s 1 opacity_effect;
 }
 
-a.nav-button:after {
-    content: "";
-    display: flex;
-    position: absolute;
-    border-radius: 7em;
-    width: 250px;
-    height: 100%;
-    opacity: 0;
-    transition: all 0.5s;
-    box-shadow: 0 0 10px 40px white;
+li.nav_li_item a p {
+    color: #ffffff;
+}
+
+ul.inner_lists a p {
     margin: 0;
-    padding: 0;
+    border-bottom: 1px solid #e9e2d0;
+    border-right: 1px solid #e9e2d0;
+    border-radius: 15px;
+    transition-duration: 0.5s;
+    padding: 1em 2em 1em 2em;
 }
 
-a.nav-button:active:after {
-    display: flex;
-    box-shadow: 0 0 0 0 white;
-    position: absolute;
-    border-radius: 5em;
-    opacity: 1;
-    transition: 0s;
-    margin: 0;
-    padding: 0;
+ul.inner_lists a p:hover {
+    border-color: #a74a41;
+    color: #b29db5;
+    transition-duration: 0.5s;
 }
 
-a.nav-button:active {
-    top: 1px;
-    outline: 0;
-    margin: 0;
-    padding: 0;
+/* Highlights the menu tab background */
+p.highlight {
+    color: #ea9085;
+    background-color: #4f323b;
+    border: 6em;
 }
-
-a.nav-button:hover {
-    transition-duration: 0.1s;
-    box-shadow: rgb(255, 173, 173) 0 1px 30px;
-}
-
-a.highlight {
-    background-color: rgba(145, 56, 56, 0.79) !important;
-}
-
 
 /* Apply screen size lower than 768 */
 @media only screen and (max-width: 768px) {
     ul.outer_lists {
         display: flex;
         width: 100%;
-        margin: 1em 0 1em 0;
+        margin: 0 0 1em 0;
         padding: 0;
     }
 
@@ -225,7 +215,7 @@ a.highlight {
         width: 100%;
     }
 
-    a.nav-button {
+    ul.inner_lists {
         display: inline;
         position: relative;
         width: 100%;
